// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"exclude" option matches snapshot for a single \`exclude\` value ({RegExp}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=8bb94238bc82ebe7567e",
    194,
    {
      "fullhash": "8bb94238bc82ebe7567e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4124,
    {
      "compressed": true,
      "immutable": true,
      "size": 4124,
    },
  ],
  [
    "main.js?var=8bb94238bc82ebe7567e",
    16413,
    {
      "fullhash": "8bb94238bc82ebe7567e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16413,
    },
  ],
]
`;

exports[`"exclude" option matches snapshot for a single \`exclude\` value ({RegExp}): errors 1`] = `[]`;

exports[`"exclude" option matches snapshot for a single \`exclude\` value ({RegExp}): warnings 1`] = `[]`;

exports[`"exclude" option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=8bb94238bc82ebe7567e",
    194,
    {
      "fullhash": "8bb94238bc82ebe7567e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4124,
    {
      "compressed": true,
      "immutable": true,
      "size": 4124,
    },
  ],
  [
    "main.js?var=8bb94238bc82ebe7567e",
    16413,
    {
      "fullhash": "8bb94238bc82ebe7567e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16413,
    },
  ],
]
`;

exports[`"exclude" option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): errors 1`] = `[]`;

exports[`"exclude" option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): warnings 1`] = `[]`;
